# Vala-Smith

./: README.md  meson.build  org.example.vala-smith.json
data/: meson.build  org.example.vala-smith.appdata.xml.in  org.example.vala-smith.desktop.in  org.example.vala-smith.gschema.xml
po/: POTFILES  meson.build
src/: graph.vala  main.vala  meson.build  vala_smith.gresource.xml  window.ui  window.vala
